--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -137,7 +137,422 @@ We have a few steps laid out ahead of us.
 
 3.  We need to do the other steps too. Three and four. I think these are easier, but I'm writing this well before I've gotten to even thinking about that. Really, writing this is the first time I've thought about it, so there might be some fairly public failure here. That should be fun!
 
-### Finding shortest paths in graphs
+### Finding shortest paths in graphs (2019-06-16)
+
+Today we'll be writing a method for finding the edges in a directed graph that contribute to the shortest paths between query pairs of nodes. It's signature looks like this:
+
+```rust
+fn shortest_paths<G>(
+    edges: &Collection<G, Edge>,
+    goals: &Collection<G, (Node, Node)>,
+) -> Collection<G, ((Node, Node), Edge)>
+where
+    G: Scope,
+    G::Timestamp: Lattice + Ord,
+{
+    unimplemented!()
+}
+```
+
+There are two differential dataflow collections as inputs: `edges` which contains naturally enough a bunch of directed edges, and `goals` which contains pairs of source and target nodes for which we should find some shortest paths (and produce output). The output collection should contain pairs of goals and edges, each of which indicates that that edge participates in the shortest paths for that goal. Ideally we produce all of the edges involved in shortest paths, and none that are not.
+
+So...
+
+Now we actually have to think about doing this. How do we compute the set of shortest paths between a source and target node?
+
+Amazingly, despite the volume of graph systems and research done, almost none of the papers report on anything remotely like this. The closest problem that systems attack is the "Single Source Shortest Path" problem, in which we have a source but specific target, and the goal is to assess the *distance* from this node to each other node in the graph.
+
+Note: *distance* not *path*, and to *all nodes* rather than *one target node*.
+
+You probably agree that paths are more than distances so we'll need to fix that, but couldn't we just do paths to all nodes and call it a day? In principle we could, but the performance difference is so massive, that we should probably try and do this well. Fortunately, we've already done it well once before, and we'll just need to tidy up that whole paths versus distances thing.
+
+#### Single-Source Shortest Paths
+
+Let's start with a refresher on differential dataflows by writing out the logic for a classical single-source shortest paths computation, where we have a collection of sources, and we want to report the distances from each source to each other node. This ends up being a fairly vanilla iterative computation:
+
+```rust
+// iteratively develop `(dst, (src, len))` statements.
+roots.map(|x| (x,(x,0))
+     .iterate(|dists|
+        // join edges with current distances.
+        edges.enter(&dists.scope())
+             .join(&dists)
+             .map(|(_mid,(dst,(src,len)))| (dst,(src,len+1)))
+             .concat(&dists)
+             .map(|(dst,(src,len))| ((dst,src),len))
+             .reduce(|_dst_src, input, output|
+                 // output minimum distance
+                 output.push((*input[0].0,1))
+             )
+     )
+```
+
+This is a not-optimized implementation that repeatedly develops statements of the form "`src` can reach `dst` along `len` edges". It does this by joining such statements with the collection `edges` of directed edges, then reducing candidate distances by `(dst, src)` key and retaining only the shortest distance.
+
+It's totally fine for what it is, but it does a fairly massive amount of work for each entry in `roots` and it determines only the shortest distance, not the paths one should follow to achieve that distance.
+
+#### Reconstructing shortest paths
+
+To foreshadow how we might reconstruct the paths, notice that `_mid` coordinate that gets discarded just after the join. This is the graph node by which we made our way to `dst`. If we write that down with `len`, then in our reduce when we determine the minimum length, we can produce the `dst` with that length. There might be multiple `dst` with the same length, and we could either produce them all (to get all shortest paths) or pick one (to get a single shortest path).
+
+#### Bi-directional Dijkstra
+
+To efficiently search for shortest paths between specific goal pairs of source and target, we'll need a new algorithm. Fortunately, such an algorithm already exists, and is even already implemented in differential dataflow's library of graph algoriths: [bijkstra.rs](https://github.com/TimelyDataflow/differential-dataflow/blob/master/src/algorithms/graphs/bijkstra.rs).
+
+The gist of the algorithm is that we can iteratively develop paths from our source outward at the same time we develop paths from our target backwards. As we want to minimize the number of edges, we can stop the computation as soon as the outward and backward explorations intersect.
+
+It may not be immediately obvious why this is such a clever idea. It sounds pretty similar to the SSSP algorithm up above, only we've made it more complicated.
+
+To explain the virtue of the algorithm, we'll want a physical analogy: Imagine as we expand outward from our source we are inflating a balloon. The volume of that balloon contains all of the nodes we've visited, and with each round of iteration it grows. If we just head out from our source, and if we are talking about 3D real-world space, then by the time we reach a target at distance `len` away our balloon will contain an amount of air cubic in `len`.
+
+On the other hand, if we start inflating balloons at both the source and the target, then they will intersect when each has radius half of `len`, meaning that although there are two balloons, the factor of two reduction in `len` means a total factor of four reduction in volume.
+
+Now, in many real-world graphs the volume (number of nodes) does not grow cubicly with the length, but rather exponentially: each additional hop increases the number of nodes by a multiplicative factor. In this case, the reduction of bi-directional Dijkstra is even more amazing: it can be more like a square root than a factor of four.
+
+#### A brief demonstration
+
+Because maybe you don't believe me yet, let's try out both traditional single-source shortest paths and bi-directional Dijkstra on large random graphs. We have some real-ish LDBC data, but for the moment I'm just going to use G(n,m) random graphs because they are easier to play around with.
+
+I just spun up both algorithms a random directed graph with 1 million nodes and 10 million edges, where in each round we add a new source node and for bi-directional Dijkstra an associated goal node. We are changing the graph a little as we do this, but mostly I want to show you the query times.
+
+First, single-source shortest paths.
+
+```
+Echidnatron% cargo run --release --bin sssp -- 1000000 10000000 1 100 inspect
+    Finished release [optimized] target(s) in 0.10s
+     Running `target/release/sssp 1000000 10000000 1 100 inspect`
+performing BFS on 1000000 nodes, 10000000 edges:
+202.141463ms    loaded
+2.295315765s    stable
+    (0, 1, 1)
+    (1, 1, 10)
+    (2, 1, 89)
+    (3, 1, 892)
+    (4, 1, 8889)
+    (5, 1, 84214)
+    (6, 1, 515544)
+    (7, 1, 388146)
+    (8, 1, 2169)
+    (9, 1, 1)
+6.320190308s    0:  4024846716
+    (1, 2, -1)
+    (2, 2, -14)
+    (3, 2, -156)
+    (4, 2, -1631)
+    (5, 2, -14898)
+    (6, 2, -53846)
+    (7, 2, 68138)
+    (8, 2, 2406)
+    (9, 2, 2)
+12.201397992s   1:  5881199856
+    (1, 3, -1)
+    (2, 3, 5)
+    (3, 3, 28)
+    (4, 3, 472)
+    (5, 3, 4851)
+    (6, 3, 18685)
+    (7, 3, -23054)
+    (8, 3, -984)
+    (9, 3, -2)
+18.465209361s   2:  6263803408
+^C
+Echidnatron%
+```
+
+We are printing out the number of nodes at each distance as a summary of the output (we don't actually want to print all distances to all nodes). But the most important thing is that it takes about six seconds to probe a new source (and to retract the previous source, which we are also doing).
+
+Compare that to bi-directional Dijkstra,
+
+```
+Echidnatron% cargo run --release --bin bijkstra -- 1000000 10000000 1 100 inspect
+    Finished release [optimized] target(s) in 0.11s
+     Running `target/release/bijkstra 1000000 10000000 1 100 inspect`
+performing BFS on 1000000 nodes, 10000000 edges:
+210.466961ms    loaded
+4.604447139s    stable
+    (((0, 1), 6), 1, 1)
+4.611941914s    0:  7463578
+    (((0, 1), 6), 2, -1)
+    (((1, 2), 7), 2, 1)
+4.672459858s    1:  60508281
+    (((1, 2), 7), 3, -1)
+    (((2, 3), 6), 3, 1)
+4.740858752s    2:  68388696
+    (((2, 3), 6), 4, -1)
+    (((3, 4), 6), 4, 1)
+4.756965996s    3:  16094611
+    (((3, 4), 6), 5, -1)
+    (((4, 5), 7), 5, 1)
+4.811579075s    4:  54603873
+    (((4, 5), 7), 6, -1)
+    (((5, 6), 7), 6, 1)
+4.909786273s    5:  98198597
+    (((5, 6), 7), 7, -1)
+    (((6, 7), 7), 7, 1)
+4.994313138s    6:  84516686
+    (((6, 7), 7), 8, -1)
+    (((7, 8), 6), 8, 1)
+5.036940575s    7:  42617149
+    (((7, 8), 6), 9, -1)
+    (((8, 9), 6), 9, 1)
+^C
+Echidnatron%
+```
+
+Once we get up and running, which admittedly takes longer than for SSSP because we must index the graph in both forward and reverse directions, each query comes back in fractions of a second rather than sixes of a second.
+
+#### Developing bi-directional Dijkstra
+
+Let's talk through the code we will use for determining the shortest paths between goal pairs of nodes.
+This code will come right where the `unimplemented!()` was when we described the method signature.
+
+The algorithm is necessarily iterative, and the first thing we'll do is establish a new iterative context, in which collections can evolve over multiple rounds, and bring in the `edges` and `goals` collections:
+
+```rust
+    // Iteratively develop reachability information.
+    edges.scope().iterative::<u64, _, _>(|inner| {
+
+        let goals = goals.enter(inner);
+        let edges = edges.enter(inner);
+
+        // to be continued ...
+```
+
+Many of the vignette examples we've seen before use the `iterate` method on collections, which starts from the collection and repeatedly updates it. Our computation will need to use [mutual recursion](https://en.wikipedia.org/wiki/Mutual_recursion), in which two collections develop concurrently. They will interact (by ceasing once they intersect) and so we cannot just develop them independently.
+
+To create such iterative variables, we dive into differential dataflow's `iterate` module, which has a `Variable` type suited just for this. It is essentially a collection that can be used before its contents are defined, and once they get defined creates an iterative computation.
+
+We are going to create two variables, one for reachability in the forward direction and one for reachability in the reverse direction:
+
+```rust
+        use differential_dataflow::operators::iterate::Variable;
+
+        // forward: ((mid1,mid2), (src, len)) can be read as
+        //      "src -len-> mid1 -> mid2 is a shortest path from src to mid2."
+        let forward = Variable::new(inner, Product::new(Default::default(), 1));
+        // reverse: ((mid1,mid2), (dst, len)) can be read as
+        //      "mid1 -> mid2 -len-> dst is a shortest path from mid1 to dst."
+        let reverse = Variable::new(inner, Product::new(Default::default(), 1));
+```
+
+These collections will be defined towards the end of our iterative scope. Right now we need to build up the associated collections and logic that allow us to define them.
+
+A first thing we'll want to do is see for which goals do their forward and reverse reachable sets intersect. This can be done by taking the edges in the `forward` and `reverse` collections and joining on them. We'll write down the sum of their lengths, and the edge itself so we know where to go when we find the minimizing lengths.
+
+```rust
+        // reached((src, dst), (mid1, mid2)) can be read as
+        //      src -*-> mid1 -> mid2 -*-> dst is a shortest path.
+        let reached: Collection<_, ((Node, Node), Edge)> =
+        forward
+            .join_map(&reverse, |&(m1,m2), &(src,len1), &(dst,len2)|
+                ((src, dst), (len1 + len2, (m1,m2)))
+            )
+            .semijoin(&goals)
+            .reduce(|&_src_dst, source, target| {
+                let min_len = (source[0].0).0;
+                for &(&(len,edge),_wgt) in source.iter() {
+                    if len == min_len {
+                        target.push((edge, 1));
+                    }
+                }
+            });
+```
+
+This `reached` set will play an important role in producing the output from the method, but for now it also lets us identify "active" goals: those that have not yet been satisfied. We'll assume that `goals` contains distinct records (this is probably wrong) and simply subtract out distinct goals in `reached`. Note that above we did a `semijoin` with `goals` so the only things we should be subtracting are actual goals.
+
+```rust
+        // Subtract from goals any goal pairs that can reach each other.
+        let active =
+        reached
+            .map(|((src,dst),_mid)| (src,dst))
+            .distinct()
+            .negate()
+            .concat(&goals)
+            .consolidate();
+```
+
+The active goals allow us to drive reachability forward (and reverse) for only the subset of sources (and targets) that still need to be developed. This will be what allows us to terminate the iteration as reachable sets intersect.
+
+Now we just need to define the rule for forward reachability: how should we set `forward` for next iteration, based on what we have so far. Informally, we 1. restrict our attention to active sources, 2. join with edges in the forward direction, and 3. minimize for each pair of source and destination
+
+```rust
+        // Let's expand out forward queries that are active.
+        let forward_active = active.map(|(x, _y)| x).distinct();
+        let forward_next =
+        forward
+            .map(|((_mid0,mid1), (src, len))| (src, (mid1, len)))
+            .semijoin(&forward_active)
+            .map(|(src, (mid1, len))| (mid1, (src, len)))
+            .join_map(&edges, |&mid1, &(src, len), &mid2| {
+                ((mid1,mid2), (src, len + 1))
+            })
+            .concat(&*forward)
+            .map(|((mid1,mid2),(src,len))| ((mid2,src),(len,mid1)))
+            .reduce(|_key, s, t| {
+                let min_len = (s[0].0).0;
+                for (&(len,mid1), _weight) in s.iter() {
+                    if len == min_len {
+                        t.push(((len, mid1), 1));
+                    }
+                }
+            })
+            .map(|((mid2, src), (len, mid1))| ((mid1,mid2),(src,len)));
+```
+
+It's a lot of characters. I'm sorry. We are trying to fix this.
+
+We can also go in the reverse direction:
+
+```rust
+        // Let's expand out reverse queries that are active.
+        let reverse_active = active.map(|(_x, y)| y).distinct();
+        let reverse_next =
+        reverse
+            .map(|((mid1,_mid2), (rev, len))| (rev, (mid1, len)))
+            .semijoin(&reverse_active)
+            .map(|(rev, (mid1, len))| (mid1, (rev, len)))
+            .join_map(&edges.map(|(x, y)| (y, x)), |&mid1, &(rev, len), &mid0| {
+                ((mid0,mid1), (rev, len + 1))
+            })
+            .concat(&reverse)
+            .map(|((mid0,mid1),(rev,len))| ((mid0,rev),(len,mid1)))
+            // .map(|(edge, (rev, len))| ((edge, rev), len))
+            .reduce(|_key, s, t| {
+                let min_len = (s[0].0).0;
+                for (&(len,mid1), _weight) in s.iter() {
+                    if len == min_len {
+                        t.push(((len, mid1), 1));
+                    }
+                }
+            })
+            .map(|((mid0, rev), (len, mid1))| ((mid0,mid1), (rev, len)));
+```
+
+These collections, `forward_next` and `reverse_next` are what we will want to assign as the definitions of `forward` and `reverse`, but we don't want to do it just yet.
+
+We actually have one more variable we want to introduce, which is the collection of edges on shortest paths. This is something that we will build up by walking backwards from those edges in `reached`, which was the collection of witnesses to shortest path reachability. All we really do here is use the output of `reached` to crawl back up `forward` and `reverse`, retracing our steps back to the source and target, respectively.
+
+Here is how I wrote it:
+
+```rust
+        let shortest = Variable::new(inner, Product::new(Default::default(), 1));
+
+        let forward_dag = forward.map(|((mid1,mid2),(src,_len))| ((src,mid2),mid1));
+        let reverse_dag = reverse.map(|((mid1,mid2),(dst,_len))| ((dst,mid1),mid2));
+
+        let short_forward =
+        shortest
+            .map(|((src,dst),(mid1,_mid2))| ((src,mid1),dst))
+            .join_map(&forward_dag, |&(src,mid1),&dst,&mid0| ((src,dst),(mid0,mid1)));
+
+        let short_reverse =
+        shortest
+            .map(|((src,dst),(_mid0,mid1))| ((dst,mid1),src))
+            .join_map(&reverse_dag, |&(dst,mid1),&src,&mid2| ((src,dst),(mid1,mid2)));
+
+        let short =
+        short_forward
+            .concat(&short_reverse)
+            .concat(&reached)
+            .distinct();
+
+        shortest.set(&short);
+```
+
+At this point, we've used `forward` and `reverse` for the last time, and can bind them off too, and return the output of the computation: `short` just above.
+
+```rust
+        forward.set(&forward_next.concat(&goals.map(|(x, _)| ((x,x),(x,0)))));
+        reverse.set(&reverse_next.concat(&goals.map(|(_, y)| ((y,y),(y,0)))));
+
+        short.leave()
+    })
+```
+
+#### Trying out the LDBC synthetic data
+
+I've got my hands on the LDBC synthetic data generator. Apparently it requires a Hadoop cluster to run, because big data. I'm going to try it out with scale-factor 1, which produces 1GB of data. Most of the data is not the social graph, however, which has only a few hundred thousand edges.
+
+Because I don't know any better, I'm just going to feed in the graph and start querying it with random goals, chosen from the set of nodes with non-zero out degree as sources and non-zero in degree as targets.
+
+```
+Echidnatron% cargo run --release --bin ldbc_bi_25 -- ~/Projects/ldbc/ldbc_snb_datagen/social_network/ true
+    Finished release [optimized] target(s) in 0.10s
+     Running `target/release/ldbc_bi_25 /Users/mcsherry/Projects/ldbc/ldbc_snb_datagen/social_network/ true`
+read 180623 lines
+performing Bi-directional Dijkstra on (8250,8466) nodes, 180623 edges:
+61.834295ms loaded
+137.455696ms    stable
+137.473761ms    query (15393162789932 -> 21990232563951)
+229.845344ms    round 0
+229.864122ms    query (21990232565205 -> 26388279066830)
+458.713557ms    round 1
+458.732648ms    query (2199023264077 -> 15393162797342)
+675.426968ms    round 2
+675.445694ms    query (17592186045005 -> 6766)
+787.770641ms    round 3
+787.788999ms    query (30786325579455 -> 30786325580460)
+901.046842ms    round 4
+901.065839ms    query (8796093029585 -> 24189255813581)
+980.537131ms    SHORTEST    (((8796093029585, 24189255813581), (21990232558990, 21990232563274)), 6, 1)
+980.555949ms    SHORTEST    (((8796093029585, 24189255813581), (21990232558990, 21990232565255)), 6, 1)
+980.558546ms    SHORTEST    (((8796093029585, 24189255813581), (21990232563274, 21990232566092)), 6, 1)
+980.560684ms    SHORTEST    (((8796093029585, 24189255813581), (21990232565255, 21990232566092)), 6, 1)
+1.081254950s    SHORTEST    (((8796093029585, 24189255813581), (8796093029585, 21990232558990)), 6, 1)
+1.081273169s    SHORTEST    (((8796093029585, 24189255813581), (21990232566092, 24189255813581)), 6, 1)
+1.085112894s    SHORTEST    (((8796093029585, 24189255813581), (8796093029585, 8796093029585)), 6, 1)
+1.085130588s    SHORTEST    (((8796093029585, 24189255813581), (24189255813581, 24189255813581)), 6, 1)
+1.088113365s    round 5
+```
+
+You may notice that the first few rounds go by with no output. That is what things look like when there is *no* path from the source to the target. I hope that is actually the case here!
+
+Eventually we get to a query with actual paths, and we get to see the full magesty of LDBC node identifiers. Note: I'm totally in favor of gross and nasty identifiers, as it trips up all of the silly "I'll just index into an array" implementations out there. Ha!
+
+What we are actually seeing above, though, is a small directed acyclic fragment of the input graph that connects source node `8796093029585` and target node `24189255813581`. It is a bit wordy, so let's isolate the actual edges:
+
+```
+    (8796093029585, 8796093029585))
+    (8796093029585, 21990232558990))
+    (21990232558990, 21990232563274))
+    (21990232558990, 21990232565255))
+    (21990232563274, 21990232566092))
+    (21990232565255, 21990232566092))
+    (21990232566092, 24189255813581))
+    (24189255813581, 24189255813581))
+```
+
+There is still a lot of noise in here, including two self-loops for the source and target, and just large but similar identifiers. Let me simplify it as
+
+```
+    (8796093029585, A))
+    (A, B))
+    (A, C))
+    (B, D))
+    (C, D))
+    (D, 24189255813581))
+```
+
+which as you can see describes two paths of equal length. Probably they are the shortest paths, or we got our algorithm very wrong! Both could be true!
+
+We can let this continue, and we reach round 100 in about 11 seconds.
+
+```
+...
+11.206315945s   query (17592186047529 -> 24189255813921)
+11.21979989s    SHORTEST    (((4398046516223, 30786325578914), (6597069767851, 24189255817517)), 101, -1)
+11.219819956s   SHORTEST    (((4398046516223, 30786325578914), (13194139537399, 24189255821300)), 101, -1)
+11.257095587s   SHORTEST    (((4398046516223, 30786325578914), (4398046516223, 6597069767851)), 101, -1)
+11.257114196s   SHORTEST    (((4398046516223, 30786325578914), (4398046516223, 13194139537399)), 101, -1)
+11.257119141s   SHORTEST    (((4398046516223, 30786325578914), (24189255817517, 30786325578914)), 101, -1)
+11.257123084s   SHORTEST    (((4398046516223, 30786325578914), (24189255821300, 30786325578914)), 101, -1)
+11.264713013s   SHORTEST    (((4398046516223, 30786325578914), (4398046516223, 4398046516223)), 101, -1)
+11.264730266s   SHORTEST    (((4398046516223, 30786325578914), (30786325578914, 30786325578914)), 101, -1)
+11.268324036s   round 100
+...
+```
+
+The output here is a bunch of subtractions, because apparently the new query doesn't connect to its target, and we are retiring the previous query that did connect. It turns out that the more expensive operations are when no connection occurs, because then you have to explore the entire graph. Finding connections early makes things faster, which is I guess what you would expect in normal computer science (not always so, in big data science).
 
 ### Scoring interactions of people
 
