--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -5,7 +5,7 @@ That wordy title thar is the name for the [Linked Data Benchmark Council](http:/
 Rather than writting a massive missive about how you write such a query in one of several frameworks, I'm going to spill things out slowly. This is mainly to give people time to ponder the problem, and think about which parts are challenging and why. It is also to give me time to finish my implementation, which as it turns out doesn't just write itself.
 
 * [Breaking down the problem.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#breaking-down-the-problem) (2019-06-13)
-* Finding shortest paths in graphs.
+* [Finding shortest paths in graphs.](https://github.com/frankmcsherry/blog/blob/master/posts/2019-06-13.md#finding-shortest-paths-in-graphs-2019-06-16) (2019-06-16)
 * Scoring interactions of people.
 * Filtering by dates.
 * Reconstructing paths.
