--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -139,7 +139,7 @@ We have a few steps laid out ahead of us.
 
 ### Finding shortest paths in graphs (2019-06-16)
 
-Today we'll be writing a method for finding the edges in a directed graph that contribute to the shortest paths between query pairs of nodes. It's signature looks like this:
+Today we'll be writing a method for finding the edges in a directed graph that contribute to the shortest paths between query pairs of nodes. Its signature looks like this:
 
 ```rust
 fn shortest_paths<G>(
