--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -160,7 +160,7 @@ So...
 
 Now we actually have to think about doing this. How do we compute the set of shortest paths between a source and target node?
 
-Amazingly, despite the volume of graph systems and research done, almost none of the papers report on anything remotely like this. The closest problem that systems attack is the "Single Source Shortest Path" problem, in which we have a source but specific target, and the goal is to assess the *distance* from this node to each other node in the graph.
+Amazingly, despite the volume of graph systems and research done, almost none of the papers report on anything remotely like this. The closest problem that systems attack is the "Single Source Shortest Path" problem, in which we have a source but no specific target, and the goal is to assess the *distance* from this node to each other node in the graph.
 
 Note: *distance* not *path*, and to *all nodes* rather than *one target node*.
 
@@ -193,11 +193,11 @@ It's totally fine for what it is, but it does a fairly massive amount of work fo
 
 #### Reconstructing shortest paths
 
-To foreshadow how we might reconstruct the paths, notice that `_mid` coordinate that gets discarded just after the join. This is the graph node by which we made our way to `dst`. If we write that down with `len`, then in our reduce when we determine the minimum length, we can produce the `dst` with that length. There might be multiple `dst` with the same length, and we could either produce them all (to get all shortest paths) or pick one (to get a single shortest path).
+To foreshadow how we might reconstruct the paths, notice that `_mid` coordinate that gets discarded just after the join. This is the graph node by which we made our way to `dst`. If we write that down with `len`, then in our reduce when we determine the minimum length, we can produce the `_mid` with that length. There might be multiple `_mid` with the same length, and we could either produce them all (to get all shortest paths) or pick one (to get a single shortest path).
 
 #### Bi-directional Dijkstra
 
-To efficiently search for shortest paths between specific goal pairs of source and target, we'll need a new algorithm. Fortunately, such an algorithm already exists, and is even already implemented in differential dataflow's library of graph algoriths: [bijkstra.rs](https://github.com/TimelyDataflow/differential-dataflow/blob/master/src/algorithms/graphs/bijkstra.rs).
+To efficiently search for shortest paths between specific goal pairs of source and target, we'll need a new algorithm. Fortunately, such an algorithm already exists, and is even already implemented in differential dataflow's library of graph algorithms: [bijkstra.rs](https://github.com/TimelyDataflow/differential-dataflow/blob/master/src/algorithms/graphs/bijkstra.rs).
 
 The gist of the algorithm is that we can iteratively develop paths from our source outward at the same time we develop paths from our target backwards. As we want to minimize the number of edges, we can stop the computation as soon as the outward and backward explorations intersect.
 
