--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -556,6 +556,136 @@ The output here is a bunch of subtractions, because apparently the new query doe
 
 ### Scoring interactions of people
 
+Our next step is to score the interactions of people in our shortest paths.
+
+Specifically, we have a collection of edges, pairs of two people who are linked by the `knows` relationship. For each of these people, we want to look up their interactions when one replied to a post or comment of another. All of this data live in the `posts` and 
+`comms` relations containing posts and comments respectively. We have a few more rules, and in particular for each interaction we want to return the forum in which the root post occurred, so that we can filter the interactions by forum.
+
+The specific method signature we'll use is
+```rust
+fn score_edges<G>(
+    edges: &Collection<G, Edge>,                    // (source, target)
+    posts: &Collection<G, (Text, (Node, Forum))>,   // (id, author, in_forum)
+    comms: &Collection<G, (Text, (Node, Text))>,    // (id, author, reply_to)
+) -> Collection<G, (Edge, Forum)>
+where
+    G: Scope,
+    G::Timestamp: Lattice + Ord,
+{
+    unimplemented!()
+}
+```
+
+We get `edges`, `posts`, and `comms` as input collections, and we want to produce a collection that enumerates for each edge the associated forums in which interactions occurred. Very likely that result collection will contain *multiplicities*: each forum might occur multiple times, reflecting multiple interactions.
+
+This method is much less complicated than shortest path finding, which is a bit of a relief. There are a few ways we could approach things, but we'll follow a pretty simple route.
+
+First, we'll want to point each comment at its parent, which could be either a post or a comment itself. These two cases are different, and we want to treat them differently. In both cases, though, we'll want to extract the pair of authors that interact. Specifically, we will output the min and max of the two authors, to put them in a canonical form, because the *directionality* of the interaction doesn't matter for our logic. We'll also want to restrict things down to just the `edges` we are interested in.
+
+In the first case we'll have a pair of authors (comment and post) and a forum identifier, which is great! 
+
+```rust
+    // Perhaps a comment links to a post ...
+    let comm_post: Collection<_,(Edge,Forum)> =
+    comms.map(|(id, (auth, link))| (link, (id, auth)))
+         .join_map(&posts, |_post, &(_id,auth_c), &(auth_p, forum)|
+             let min = std::cmp::min(auth_c, auth_p);
+             let max = std::cmp::max(auth_c, auth_p);
+             ((min, max), forum)
+         )
+         .semijoin(&edges);
+```
+
+In the second case we'll have a pair of authors and a .. some comment identifier, not the forum identifier, which is less great! We will capture the identifier of the parent, and resolve that in just a moment.
+
+```rust
+    /// Perhaps a comment links to a comment ...
+    let comm_comm: Collection<_,(Edge,Text)> =
+    comms.map(|(id, (auth, link))| (link, (id, auth)))
+         .join_map(&comms, |_comm, &(_id,auth_c), &(auth_p,link)|
+             let min = std::cmp::min(auth_c, auth_p);
+             let max = std::cmp::max(auth_c, auth_p);
+             ((min, max), forum)
+         )
+         .semijoin(&edges);
+```
+
+To resolve the forum identity for a comment, we'll want access to all the comments, and the links they form from child to parent. These links form a directed forest (a bunch of trees), with the posts at the root. We'll also throw in self-links from each post to itself, to make our life easier in just a moment.
+
+```rust
+    /// All comment -> parent links.
+    let links =
+    comms.map(|(id, (_, link))| (id, link))
+         .concat(&posts.map(|(id, _)| (id, id)));
+```
+
+And with this in hand, we can iteratively climb along these links until we reach fixed point, because posts point at themselves. This will eventually get us to an identifier for a *post*, which we can use to look up the forum. The iterative climb we do with an `iterate` command, and the post lookup with a `join`.
+
+```rust
+    comm_comm
+        .map(|(edge, link)| (link, edge))
+        .iterate(|scores|
+            // climb upward along `links`.
+            links.enter(&scores.scope())
+                 .join_map(&scores, |_src, &dst, &edge| (dst, edge))
+        )
+        .join_map(&posts, |_post,&edge,&(_, forum)| (edge, forum))
+        .concat(&comm_post)
+        .concat(&comm_post)
+        .consolidate()
+}
+```
+
+That curly brace means we are done. We just iteratively climb up along the links and then join with `posts`. We add in `comm_post` for good measure (twice, because the rules are that these interactions count twice as much). And we're done!
+
+#### Trying it out
+
+I changed my test harness a bit to produce deterministic queries (enumerating a Rust hash map: not deterministic), and to start from nodes with low-ish but not very low degree (I chose 10).
+
+```
+Echidnatron% cargo run --release --bin ldbc_bi_25 -- ~/Projects/ldbc/ldbc_snb_datagen/social_network/ 10 false
+    Finished release [optimized] target(s) in 0.10s
+     Running `target/release/ldbc_bi_25 /Users/mcsherry/Projects/ldbc/ldbc_snb_datagen/social_network/ 10 false`
+comms: read 2052169 lines
+posts: read 1003605 lines
+knows: read 180623 lines
+performing Bi-directional Dijkstra on (8250,8466) nodes, 180623 edges:
+2.08377083s	loaded
+5.048525065s	stable
+```
+
+The first thing to note is that `comms` and `posts` are a fair bit bigger than `knows`. We aren't doing quite the same exotic computation with them, though, so it's not horribly painful. We haven't even thought about how we might maintain `posts` in an arrangement and re-use it in two of our joins (go check!).
+
+Once we get going, we start to see some output:
+
+```
+5.144198441s	round 0 (query: 1829 -> 5274)
+5.424653593s	round 1 (query: 2269 -> 7567)
+SHORTEDGE: (((2843, 10169), (4555, 5274)), 3, 1)
+SHORTEDGE: (((2843, 10169), (5274, 7216)), 3, 1)
+SHORTEDGE: (((2843, 10169), (2843, 4555)), 3, 1)
+SHORTEDGE: (((2843, 10169), (7216, 10169)), 3, 1)
+EDGESCORE: (((2843, 4555), 99268), 3, 24)
+EDGESCORE: (((4555, 5274), 36261), 3, 1)
+EDGESCORE: (((4555, 5274), 66684), 3, 70)
+EDGESCORE: (((4555, 5274), 137438982755), 3, 1)
+EDGESCORE: (((4555, 5274), 274878002164), 3, 1)
+EDGESCORE: (((4555, 5274), 274878007528), 3, 1)
+EDGESCORE: (((5274, 7216), 3536), 3, 50)
+EDGESCORE: (((5274, 7216), 55135), 3, 1)
+EDGESCORE: (((5274, 7216), 1786706465559), 3, 1)
+EDGESCORE: (((7216, 10169), 88394), 3, 12)
+5.693322633s	round 2 (query: 2843 -> 10169)
+```
+
+Here `SHORTEDGE` are edges observed on shortest paths for indicate queries. At the moment, the source is `2843` and the destination is `10169`. Apparently we can get from one to the other on a short path through nodes with short names, which is a relief.
+
+The `EDGESCORE` outputs are pairs of edge and forum identifier, where each edge should ideally be one of those in the `SHORTEDGE` output. I've just looked and verified that this is indeed the cose, so good work us. The forum identifiers can be all over the place, and you might also notice that the *counts*, the last coordinate, are not always `1`. Some forums, like `66684`, are pretty popular.
+
+This continues for a bit, and generally seems to be pretty brisk (as before, the slow rounds are the ones with no paths, which provide no work for the edge scoring dataflow to do).
+
+Things are looking pretty good, I figure. Of course, we aren't actually testing this for correctness yet. I'm not entirely sure when we are going to get around to that (or how, to be honest), but for the moment let's just imagine that we are quite clever and fast.
+
 ### Filtering by dates
 
 ### Reconstructing paths
