--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -554,7 +554,7 @@ We can let this continue, and we reach round 100 in about 11 seconds.
 
 The output here is a bunch of subtractions, because apparently the new query doesn't connect to its target, and we are retiring the previous query that did connect. It turns out that the more expensive operations are when no connection occurs, because then you have to explore the entire graph. Finding connections early makes things faster, which is I guess what you would expect in normal computer science (not always so, in big data science).
 
-### Scoring interactions of people
+### Scoring interactions of people (2019-06-19)
 
 Our next step is to score the interactions of people in our shortest paths.
 
