--- a/posts/2019-06-13.md
+++ b/posts/2019-06-13.md
@@ -605,7 +605,7 @@ In the second case we'll have a pair of authors and a .. some comment identifier
          .join_map(&comms, |_comm, &(_id,auth_c), &(auth_p,link)|
              let min = std::cmp::min(auth_c, auth_p);
              let max = std::cmp::max(auth_c, auth_p);
-             ((min, max), forum)
+             ((min, max), link)
          )
          .semijoin(&edges);
 ```
